tests/ui/error-codes/E0622.stderr
error[E0622]: intrinsic must be a function
  --> $DIR/E0622.rs:3:5
   |
LL |     pub static breakpoint : unsafe extern "crablang-intrinsic" fn();
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected a function

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0622`.
